# Velora-Env

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION_STEPS.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: customers.csv  legacy_orders_backup.csv  logs.json  marketing.csv  orders.csv  random_logs.json  test_data.csv
env/: __init__.py  env.py  grader.py  models.py  reward.py  tasks.py
server/: app.py
