[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "velora-env"
version = "0.1.0"
description = "OpenEnv environment for training AI agents to act as data analysts."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ambuj Raj" }
]
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.30.0",
  "openenv-core>=0.2.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "uvicorn>=0.30.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["env*", "server*"]
